--- a/public_html/alchemy/log.css
+++ b/public_html/alchemy/log.css
@@ -55,31 +55,7 @@ td a {
   text-align: right;
 }
 
-.land-auction {
-  background-color: #FFFFC0;
-  border-style: solid;
-  border-width: 1px;
-  padding: 2px;
-  text-align: center;
-}
-
-.land-deal {
-  background-color: #E0FFE0;
-  border-style: solid;
-  border-width: 1px;
-  padding: 2px;
-  text-align: center;
-}
-
-.land-confiscation {
-  background-color: #FFE0E0;
-  border-style: solid;
-  border-width: 1px;
-  padding: 2px;
-  text-align: center;
-}
-
-.land-release {
+.filter-off {
   background-color: #E7E7E7;
   border-style: solid;
   border-width: 1px;
@@ -87,32 +63,8 @@ td a {
   text-align: center;
 }
 
-.deal-general {
-  background-color: #E0E0FF;
-  border-style: solid;
-  border-width: 1px;
-  padding: 2px;
-  text-align: center;
-}
-
-.deal-buying {
-  background-color: #FFE0E0;
-  border-style: solid;
-  border-width: 1px;
-  padding: 2px;
-  text-align: center;
-}
-
-.deal-selling {
-  background-color: #E0FFE0;
-  border-style: solid;
-  border-width: 1px;
-  padding: 2px;
-  text-align: center;
-}
-
-.deal-station {
-  background-color: #FFD0F0;
+.filter-on {
+  background-color: #E7E737;
   border-style: solid;
   border-width: 1px;
   padding: 2px;
